<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/adminEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/agbalumo"
        android:text="Event Name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="351dp"
        android:layout_height="232dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminEventName"
        app:srcCompat="@drawable/common_full_open_on_phone" />

    <TextView
        android:id="@+id/organizerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="organizer: "
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/organizer"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="organizer: "
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/poster"
        app:layout_constraintLeft_toRightOf="@+id/organizerLabel"/>

    <TextView
        android:id="@+id/facilityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="facility name: "
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/facility"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/facility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="facility name: "
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/organizer"
        app:layout_constraintLeft_toRightOf="@id/facilityLabel"/>

    <TextView
        android:id="@+id/descHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle=""
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="Description"
        app:layout_constraintTop_toBottomOf="@+id/facility"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/eventDetail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descHeader" />

    <Button
        android:id="@+id/adminEventDelete"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="48dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDetail"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/adminEventBack"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDetail"
        app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>