<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/organizerMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/baseline_mail_outline_24"
            android:id="@+id/notificationBtn"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">
        </Button>

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/qrCodeBtn"
            android:background="@drawable/baseline_qr_code_scanner_24"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_centerVertical="true"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/updateProfileImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@drawable/circular_image_background"
            android:focusable="true"
            android:src="@drawable/baseline_person_outline_24"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:shapeAppearanceOverlay="@style/CircularImageView"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_multi_textview"
            android:paddingVertical="4dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/browseHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Browse"
                android:background="@drawable/left_section_selector"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"
                android:maxLines="1"/>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/adminContentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <ListView
            android:id="@+id/contentListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_gravity="end|bottom"/>

    </FrameLayout>

</LinearLayout>